# sigil

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  WORKFLOW.md  docker-compose.yaml  go.work  go.work.sum  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.config/: Dockerfile  Dockerfile.api  Dockerfile.plugin  Dockerfile.sdk-traffic  Dockerfile.sigil  docker-compose-base.yaml  entrypoint.sh  grafana.ini  mysql-bootstrap.sql
.config/supervisord/: supervisord.conf
.cursor/commands/: babysitci.md
.github/workflows/: ci.yml  plugins-push.yaml  sigil-image-publish.yml
api/: .air.toml  go.mod  go.sum
api/docs/: README.md
apps/plugin/: .eslintrc.js  CHANGELOG.md  LICENSE  go.mod  go.sum  jest-setup.js  jest.config.js  package.json  tsconfig.json  webpack.config.ts
charts/sigil/: .helmignore  Chart.yaml  README.md  values.yaml
config/prometheus/: prometheus.yaml
config/tempo/: tempo.yaml
docs/: ARCHITECTURE.md  BOOTSTRAP_TODO.md  DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  VIBE.md  index.md
docs/design-docs/: 2026-02-12-model-card-catalog-refresh.md  2026-02-12-phase-2-hybrid-storage.md  2026-02-12-phase-2-otel-sdk-query-storage.md  2026-02-12-phase-2-query-proxy.md  2026-02-12-phase-2-sdk-parity-python.md  2026-02-12-phase-2-sdk-parity-typescript-javascript.md  2026-02-13-compaction-scaling.md  2026-02-13-sdk-metrics-and-telemetry-pipeline.md  2026-02-15-conversation-query-path.md  2026-02-17-online-evaluation.md  2026-02-20-sdk-langchain-langgraph-integrations.md  2026-02-20-sdk-openai-agents-llamaindex-google-adk-integrations.md  2026-02-22-sdk-vercel-ai-sdk-integration.md  2026-03-02-evaluator-templates.md  2026-03-03-backend-operational-metrics-baseline.md  2026-03-04-eval-saved-conversations.md  2026-03-05-streaming-conversation-search.md  2026-03-11-eval-saved-conversation-collections.md  2026-03-12-agent-and-large-conversation-latency-spike.md  2026-03-12-conv-saved-collections-page.md  2026-03-12-sdk-conformance-harness.md  core-beliefs.md  index.md
docs/exec-plans/: tech-debt-tracker.md
docs/landing/: LANDING.md
docs/plans/: 2026-03-02-online-evaluation-ui-design.md  2026-03-03-eval-quick-test-design.md  2026-03-03-eval-quick-test-plan.md  2026-03-05-tokenizer-visualization-design.md  2026-03-05-tokenizer-visualization-plan.md
docs/product-specs/: index.md  new-user-onboarding.md
docs/references/: competitive-benchmark.md  eval-control-plane.md  generation-ingest-contract.md  grafana-query-response-shapes.md  helm-chart.md  index.md  langfuse.example.md  model-cards-api.md  multi-tenancy.md  online-evaluation-user-guide.md  openlit.example.md  openllmetry.example.md  sdk-conformance-spec.md  semantic-conventions.md  storage-benchmarks.md  symphony-setup.md
plugins/opencode/: package.json
provisioning/datasources/: datasources.yaml
provisioning/plugins/: apps.yaml
scripts/: assistant_offset_compose.py  run-assistant-offset.sh
sdks/dotnet/: README.md
sdks/go/: README.md  go.mod  go.sum
sdks/java/: README.md  settings.gradle.kts
sdks/js/: README.md  package.json  tmp-tscheck.ts  tsconfig.build.json  tsconfig.json  tsconfig.test.json
sdks/python/: README.md  pyproject.toml
sdks/python-frameworks/google-adk/: README.md  pyproject.toml
sdks/python-frameworks/google-adk/sigil_sdk_google_adk/: __init__.py  handler.py
sdks/python-frameworks/google-adk/tests/: test_sigil_sdk_google_adk.py
sdks/python-frameworks/langchain/: README.md  pyproject.toml
sdks/python-frameworks/langchain/sigil_sdk_langchain/: __init__.py  handler.py
sdks/python-frameworks/langchain/tests/: test_langchain_handler.py
sdks/python-frameworks/langgraph/: README.md  pyproject.toml
sdks/python-frameworks/langgraph/sigil_sdk_langgraph/: __init__.py  handler.py
sdks/python-frameworks/langgraph/tests/: test_langgraph_handler.py
sdks/python-frameworks/llamaindex/: LICENSE  README.md  pyproject.toml
sdks/python-frameworks/llamaindex/sigil_sdk_llamaindex/: __init__.py  handler.py
sdks/python-frameworks/llamaindex/tests/: test_sigil_sdk_llamaindex.py
sdks/python-frameworks/openai-agents/: README.md  pyproject.toml
sdks/python-frameworks/openai-agents/sigil_sdk_openai_agents/: __init__.py  handler.py
sdks/python-frameworks/openai-agents/tests/: test_sigil_sdk_openai_agents.py
sdks/python-providers/anthropic/: README.md  pyproject.toml
sdks/python-providers/anthropic/sigil_sdk_anthropic/: __init__.py  provider.py
sdks/python-providers/anthropic/tests/: test_anthropic_provider.py
sdks/python-providers/gemini/: README.md  pyproject.toml
sdks/python-providers/gemini/sigil_sdk_gemini/: __init__.py  provider.py
sdks/python-providers/gemini/tests/: test_gemini_provider.py
sdks/python/scripts/: devex_emitter.py  generate_proto.sh
sdks/python/sigil_sdk/: __init__.py  client.py  config.py  context.py  errors.py  framework_handler.py  models.py  proto_mapping.py  tracing.py  validation.py
sdks/python/sigil_sdk/exporters/: __init__.py  base.py  grpc.py  http.py
sdks/python/sigil_sdk/internal/: __init__.py
sdks/python/tests/: conftest.py  test_auth_config.py  test_devex_emitter.py  test_rating_transport.py  test_runtime.py  test_trace_transport.py  test_transport.py  test_validation.py
sigil/: .air.toml  Dockerfile  go.mod  go.sum
sigil/docs/: README.md
sigil/e2e/: storage_hot_cold_local_test.go
sigil/internal/: catalog_sync_module.go  ingester_module.go  modelcards_factory.go  querier_module.go  (+10 more)
(+913 files in other folders)
