[project]
name = "sigil-sdk-langgraph"
version = "0.1.0"
description = "LangGraph callback handlers for Sigil Python SDK"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "sigil-sdk>=0.1.0",
  "langchain-core>=0.3.0",
  "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sigil_sdk_langgraph*"]

[tool.setuptools.package-data]
sigil_sdk_langgraph = ["py.typed"]
