[project]
name = "sigil-sdk-llamaindex"
version = "0.1.0"
description = "LlamaIndex callback handlers for Sigil Python SDK"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "sigil-sdk>=0.1.0",
  "llama-index>=0.14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sigil_sdk_llamaindex*"]

[tool.setuptools.package-data]
sigil_sdk_llamaindex = ["py.typed"]
