[project]
name = "sigil-sdk-openai-agents"
version = "0.1.0"
description = "OpenAI Agents callback handlers for Sigil Python SDK"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "sigil-sdk>=0.1.0",
  "openai-agents>=0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sigil_sdk_openai_agents*"]

[tool.setuptools.package-data]
sigil_sdk_openai_agents = ["py.typed"]
