[project]
name = "sigil-sdk-anthropic"
version = "0.1.0"
description = "Anthropic helper wrappers for Sigil Python SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "sigil-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sigil_sdk_anthropic*"]

[tool.setuptools.package-data]
sigil_sdk_anthropic = ["py.typed"]
